# firma-protobuf

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  buf.yaml  build.rs  cliff.toml  cog.toml  deny.toml  dprint.json  tool-versions.env
.cargo/: audit.toml
.githooks/: pre-commit
.github/workflows/: buf.yml  ci.yml  publish.yml
just/: build.just  changelog.just  code_check.just  install.just  test.just
proto/firma/v1/: audit.proto  authority.proto  types.proto
src/: lib.rs
