[package]
name = "firma-protobuf"
version = "0.1.1"
categories = ["network-programming", "api-bindings"]
edition = "2024"
include = [
  "src/**/*.rs",
  "build.rs",
  "proto/**/*.proto",
  "README.md",
  "LICENSE",
]
keywords = ["firma", "protobuf", "grpc", "tonic", "wire-contract"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Firma-AI/firma-protobuf"
rust-version = "1.88.0"
description = "Shared Protobuf/gRPC wire contract (firma.v1) for the Firma stack: Authority, Sidecar, and audit planes"

[dependencies]
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", default-features = false, features = ["codegen", "transport"] }
tonic-prost = "0.14"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3.2"
tonic-prost-build = "0.14"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"
module_name_repetitions = "allow"

[lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
